---
source: squirrel_lang/src/lexer.rs
expression: Lexer test for squirrel_repo/methcall.nut
---
- Newline
- Newline
- Class
- Identifier: Toggle
- LeftCurlyBrace
- Newline
- Identifier: bool
- Assign
- "Null"
- Newline
- RightCurlyBrace
- Newline
- Newline
- Function
- Identifier: Toggle
- DoubleColon
- Identifier: constructor
- LeftParenthesis
- Identifier: startstate
- RightParenthesis
- LeftCurlyBrace
- Newline
- Identifier: bool
- Assign
- Identifier: startstate
- Newline
- RightCurlyBrace
- Newline
- Newline
- Function
- Identifier: Toggle
- DoubleColon
- Identifier: value
- LeftParenthesis
- RightParenthesis
- LeftCurlyBrace
- Newline
- Return
- Identifier: bool
- Semicolon
- Newline
- RightCurlyBrace
- Newline
- Newline
- Function
- Identifier: Toggle
- DoubleColon
- Identifier: activate
- LeftParenthesis
- RightParenthesis
- LeftCurlyBrace
- Newline
- Identifier: bool
- Assign
- Not
- Identifier: bool
- Semicolon
- Newline
- Return
- This
- Semicolon
- Newline
- RightCurlyBrace
- Newline
- Newline
- Class
- Identifier: NthToggle
- Extends
- Identifier: Toggle
- LeftCurlyBrace
- Newline
- Identifier: count_max
- Assign
- "Null"
- Newline
- Identifier: count
- Assign
- Integer: 0
- Newline
- RightCurlyBrace
- Newline
- Newline
- Function
- Identifier: NthToggle
- DoubleColon
- Identifier: constructor
- LeftParenthesis
- Identifier: start_state
- Comma
- Identifier: max_counter
- RightParenthesis
- Newline
- LeftCurlyBrace
- Newline
- Base
- Period
- Identifier: constructor
- LeftParenthesis
- Identifier: start_state
- RightParenthesis
- Semicolon
- Newline
- Identifier: count_max
- Assign
- Identifier: max_counter
- Newline
- RightCurlyBrace
- Newline
- Newline
- Function
- Identifier: NthToggle
- DoubleColon
- Identifier: activate
- LeftParenthesis
- RightParenthesis
- Newline
- LeftCurlyBrace
- Newline
- Increment
- Identifier: count
- Semicolon
- Newline
- If
- LeftParenthesis
- Identifier: count
- GreaterThanEquals
- Identifier: count_max
- RightParenthesis
- LeftCurlyBrace
- Newline
- Base
- Period
- Identifier: activate
- LeftParenthesis
- RightParenthesis
- Semicolon
- Newline
- Identifier: count
- Assign
- Integer: 0
- Semicolon
- Newline
- RightCurlyBrace
- Newline
- Return
- This
- Semicolon
- Newline
- RightCurlyBrace
- Newline
- Newline
- Newline
- Function
- Identifier: main
- LeftParenthesis
- RightParenthesis
- LeftCurlyBrace
- Newline
- Local
- Identifier: n
- Assign
- Identifier: vargv
- Period
- Identifier: len
- LeftParenthesis
- RightParenthesis
- DoesNotEqual
- Integer: 0
- QuestionMark
- Identifier: vargv
- LeftSquareBracket
- Integer: 0
- RightSquareBracket
- Period
- Identifier: tointeger
- LeftParenthesis
- RightParenthesis
- Colon
- Integer: 1
- Newline
- Newline
- Newline
- Newline
- Local
- Identifier: val
- Assign
- Integer: 1
- Semicolon
- Newline
- Local
- Identifier: toggle
- Assign
- Identifier: Toggle
- LeftParenthesis
- Identifier: val
- RightParenthesis
- Semicolon
- Newline
- Local
- Identifier: i
- Assign
- Identifier: n
- Semicolon
- Newline
- While
- LeftParenthesis
- Identifier: i
- Decrement
- RightParenthesis
- LeftCurlyBrace
- Newline
- Identifier: val
- Assign
- Identifier: toggle
- Period
- Identifier: activate
- LeftParenthesis
- RightParenthesis
- Period
- Identifier: value
- LeftParenthesis
- RightParenthesis
- Semicolon
- Newline
- Newline
- RightCurlyBrace
- Newline
- Identifier: print
- LeftParenthesis
- Identifier: toggle
- Period
- Identifier: value
- LeftParenthesis
- RightParenthesis
- QuestionMark
- String: "true\n"
- Colon
- String: "false\n"
- RightParenthesis
- Semicolon
- Newline
- Newline
- Identifier: val
- Assign
- Integer: 1
- Semicolon
- Newline
- Local
- Identifier: ntoggle
- Assign
- Identifier: NthToggle
- LeftParenthesis
- Identifier: val
- Comma
- Integer: 3
- RightParenthesis
- Semicolon
- Newline
- Identifier: i
- Assign
- Identifier: n
- Semicolon
- Newline
- While
- LeftParenthesis
- Identifier: i
- Decrement
- RightParenthesis
- LeftCurlyBrace
- Newline
- Identifier: val
- Assign
- Identifier: ntoggle
- Period
- Identifier: activate
- LeftParenthesis
- RightParenthesis
- Period
- Identifier: value
- LeftParenthesis
- RightParenthesis
- Semicolon
- Newline
- RightCurlyBrace
- Newline
- Identifier: print
- LeftParenthesis
- Identifier: ntoggle
- Period
- Identifier: value
- LeftParenthesis
- RightParenthesis
- QuestionMark
- String: "true\n"
- Colon
- String: "false\n"
- RightParenthesis
- Semicolon
- Newline
- Newline
- RightCurlyBrace
- Newline
- Local
- Identifier: start
- Assign
- Identifier: clock
- LeftParenthesis
- RightParenthesis
- Semicolon
- Newline
- Identifier: main
- LeftParenthesis
- RightParenthesis
- Semicolon
- Newline
- Identifier: print
- LeftParenthesis
- String: TIME=
- Plus
- LeftParenthesis
- Identifier: clock
- LeftParenthesis
- RightParenthesis
- Minus
- Identifier: start
- RightParenthesis
- Plus
- String: "\n"
- RightParenthesis
- Semicolon
- Newline
